[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensorlinx"
version = "0.1.0"
description = "Python client library for the HBX SensorLinx building automation API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["sensorlinx", "hbx", "building-automation", "hvac", "home-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-httpx>=0.22",
]

[project.urls]
"Homepage" = "https://github.com/knobunc/sensorlinx"
"Bug Tracker" = "https://github.com/knobunc/sensorlinx/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sensorlinx*"]
